Fix social alignment and font size and spacing

--- a/src/components/Intro/intro.sass
+++ b/src/components/Intro/intro.sass
@@ -16,7 +16,7 @@
 .h1
   font-weight: 400
   font-size: 2.5rem
-  letter-spacing: -0.09rem
+  letter-spacing: -0.095rem
 
 .h1-bold
   font-weight: 800
@@ -24,11 +24,11 @@
 
 .h2
   font-weight: 400
-  font-size: 1.7rem
+  font-size: 1.8125rem
   line-height: 1.4
   letter-spacing: -0.07rem
   max-width: 600px
   margin: 1rem auto
 
-body[lang="en"] .h2
-  max-width: 530px
+html[lang="en"] .h2
+  max-width: 550px
