--- a/src/components/Projects/projects.sass
+++ b/src/components/Projects/projects.sass
@@ -78,7 +78,7 @@ $breakpoint-large: 960px // 960px
   right: -1px
   left: -1px
   z-index: 12
-  background: rgba($accent, 0.94)
+  background: rgba($accent, 1)
   opacity: 0
   border-radius: $projectBorderRadius
   transition: transform 0.8s $easeCurve
@@ -98,13 +98,14 @@ $breakpoint-large: 960px // 960px
 .project-title
   margin: 0 0 0.3rem
   font-size: 1.65rem
-  letter-spacing: -0.06rem
+  letter-spacing: -0.07rem
   font-weight: 800
 
 .project-title i
   font-weight: 400
   font-size: 1.2rem
   font-style: normal
+  letter-spacing: -0.06rem
 
 .project-role
   margin: 0
@@ -117,6 +118,7 @@ $breakpoint-large: 960px // 960px
   opacity: 0
   font-size: 1rem
   padding-top: 3rem
+  line-height: 1.5
   transition: padding 0.5s $easeCurve
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif
 
