--- a/src/styles/colors.sass
+++ b/src/styles/colors.sass
@@ -6,7 +6,7 @@ $darkText: #fff
 $darkPlaceholder: #0D243A
 $darkShadow: #0143CD
 
-$accent: #FA004B
+$accent: #FF004B //FA004B
 $text: #434E63
 $border: #DCDEE2
 $grey1: #434E63
